Fixed treeview selection visibility

--- a/webapp/css/ol-controls.css
+++ b/webapp/css/ol-controls.css
@@ -52,7 +52,8 @@
     max-height: calc(100% - 1rem);
 }
 
-.ol-zone > .ol-control {
+.ol-zone > .ol-control,
+.ol-zone > .ol-measure-control {
     position: relative !important;
     top: auto !important;
     left: auto !important;
